argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    acme.cert-manager.io/http01-ingress-class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"

spec:
  ingressClassName: nginx
  tls:
    - secretName: argocd-ingress-tls
      hosts:
        - argocd.tarchunk.win
  rules:
    - host: argocd.tarchunk.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
